--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
     <ul class="menu">
         <li><a href="#home">Home</a></li>
         <li><a href="#about">About me</a></li>
-        <li><a href="#videos">Videos</a></li>
+        <li><a href="#skills">My Skills</a></li>
+        <li><a href="#works">My Works</a></li>
         <li><a href="#contact">Contact</a></li>
     </ul>
     <header id="home" class="flex-container">
@@ -32,18 +33,18 @@
             About Me
         </h1>
         <hr>
-        <p>Tamen ingeniis in quid quae, quo nisi arbitrantur ad ex nisi nulla dolor nescius 
-            iis irure comprehenderit vidisse duis excepteur. Malis cernantur ab adipisicing 
-            aut ipsum a tempor quo cillum incurreret ut quae legam si ex multos ullamco 
-            laborum. Tamen id offendit ea eram, iis a summis amet velit, ad enim possumus 
+        <p>Tamen ingeniis in quid quae, quo nisi arbitrantur ad ex nisi nulla dolor nescius
+            iis irure comprehenderit vidisse duis excepteur. Malis cernantur ab adipisicing
+            aut ipsum a tempor quo cillum incurreret ut quae legam si ex multos ullamco
+            laborum. Tamen id offendit ea eram, iis a summis amet velit, ad enim possumus
             transferrem o velit arbitror ubi proident. An quid distinguantur.
             <br><br>
-            Nescius ne 
-            amet ne id ipsum sint legam ingeniis. Varias si laboris ne veniam, pariatur 
-            familiaritatem ex offendit ita est ad philosophari, ea ut cohaerescant. 
-            Mandaremus minim ingeniis do ad sunt offendit consectetur, labore quibusdam te 
-            sint duis, minim incurreret de malis summis. Ingeniis e enim ullamco, malis qui 
-            commodo nam aliqua, ita velit graviterque quo incurreret irure deserunt 
+            Nescius ne
+            amet ne id ipsum sint legam ingeniis. Varias si laboris ne veniam, pariatur
+            familiaritatem ex offendit ita est ad philosophari, ea ut cohaerescant.
+            Mandaremus minim ingeniis do ad sunt offendit consectetur, labore quibusdam te
+            sint duis, minim incurreret de malis summis. Ingeniis e enim ullamco, malis qui
+            commodo nam aliqua, ita velit graviterque quo incurreret irure deserunt
             senserit.</p>
     </section>
     <section id="works" class="center">
@@ -53,45 +54,45 @@
             <div class="card">
                 <img src="perimeter.png">
                 <div class="container">
-                    <h4><b>Perimeter Calculator</b></h4> 
+                    <h4><b>Perimeter Calculator</b></h4>
                     <p>
                         <a href="https://studio.code.org/projects/applab/QQAlUIocQeTL7k2SGHIKaerjiROXChGCxM4ly18liGk" target="_blank">
                         Click here to open
                         </a>
-                    </p> 
+                    </p>
                 </div>
             </div>
             <div class="card">
                 <img src="birthday (3).png">
                 <div class="container">
-                    <h4><b>Birthday Wish Maker</b></h4> 
+                    <h4><b>Birthday Wish Maker</b></h4>
                     <p>
                         <a href="https://studio.code.org/projects/applab/iXiSg_WsyQq1v21rRsIZuJtoXPS0j2AVqxGDJHY0pXg" target="_blank">
                         Click here to open
                         </a>
-                    </p>  
+                    </p>
                 </div>
             </div>
             <div class="card">
                 <img src="dialogflow.png">
                 <div class="container">
-                    <h4><b>My Assistant</b></h4> 
+                    <h4><b>My Assistant</b></h4>
                     <p>
                         <a href="https://console.dialogflow.com/api-client/demo/embedded/89eb6011-e32a-4a2e-ae2e-259fecd6784d" target="_blank">
                         Click here to open
                         </a>
-                    </p>  
+                    </p>
                 </div>
             </div>
             <div class="card">
                 <img src="ponggame.png">
                 <div class="container">
                     <h4>
-                        <b>Pong Game</b></h4> 
+                        <b>Pong Game</b></h4>
                     <p><a href="https://studio.code.org/projects/gamelab/CSlo2p0yNDYC6DU3JTokHXx-2m9qDWxvGP25jMsezJA" target="_blank">
                         Click here to open
                         </a>
-                    </p>  
+                    </p>
                 </div>
             </div>
         </div>
